# jik

./: .gitignore  CMakeLists.txt  README.md  build.sh  data.sh
cmake/: lint.cmake
core/: CMakeLists.txt  arg_parse.h  dataset.h  layer.h  layer_add.h  layer_batch_norm.h  layer_conv.h  layer_data.h  layer_dropout.h  layer_eltwise_mult.h  layer_eltwise_scale.h  layer_euclidean_loss.h  layer_inner_product.h  layer_loss.h  layer_mult.h  layer_pool.h  layer_pool_avg.h  layer_pool_max.h  layer_relu.h  layer_scale.h  layer_sigmoid.h  layer_softmax_loss.h  layer_tanh.h  log.h  mat.h  model.h  param.h  rand.h  solver.h  solver_rmsprop.h  solver_sgd.h  state.h
data/download/: cifar10.sh  mnist.sh  mnist_render.sh  svhn.sh  textgen.sh
data/mnist/: README.md  mnist_render.py  svhn_to_cifar10.py  svhn_to_mnist.py
recurrent/: CMakeLists.txt  lstm.h  recurrent.h  rnn.h
sandbox/: CMakeLists.txt
sandbox/cifar10/: CMakeLists.txt  cifar10.cc
sandbox/linear_regression/: CMakeLists.txt  linear_regression.cc
sandbox/mnist/: CMakeLists.txt  mnist.cc
sandbox/textgen/: CMakeLists.txt  textgen.cc
